Auto calculate ems and fix line height and text alignement

--- a/stories/stories.scss
+++ b/stories/stories.scss
@@ -1,4 +1,5 @@
 @import '../index.scss';
 body {
   font-family: 'SymphonyLato', 'Lato', 'Segoe UI', 'Helvetica Neue', 'Verdana', 'Arial', sans-serif;
+  font-size: 14px;
 }
